2000-07-13  Bruce Guenter  <bruce@bruce-guenter.dyndns.org>

	* Removed include of mystring.

2000-01-09  Bruce Guenter  <bruceg@daedalus.bfsmedia.com>

	* main.cc (parse_short): Modified the logic here to treat a string
	value immediately following a string option as the value for that
	option rather than as more flags.  This makes it behave much more
	like the standard getopt library.

1999-09-30  Bruce Guenter  <bguenter@mikhail.qcc.sk.ca>

	* main.cc (show_option): Changed stringlist option string from
	"=LIST" to "=ITEM".

1999-09-29  Bruce Guenter  <bguenter@mikhail.qcc.sk.ca>

	* main.cc (cli_option::set): Fixed problem with setting a string
	list option.

1999-09-11  Bruce Guenter  <bguenter@mikhail.qcc.sk.ca>

	* main.cc (show_help): Split off two parts of this routine into
	calc_max_width and show_option.
	(show_option): Add "=INT" for integer options, and don't add extra
	space for non-value long options.
	(set): Use strtol instead of atoi to parse the integer string, to
	allow for error checking.
	(show_option): Fixed handling of string lists.

1999-08-14  Bruce Guenter  <bguenter@mikhail.qcc.sk.ca>

	* main.cc (set_argv0): Sets argv0 to the complete value of
	argv[0], argv0dir to the part of argv[0] up to and including the
	last '/' (or blank if there is none), and argv0base to the
	remainder of argv[0].  This is for use in programs that determine
	what to do based on the value of the program name.

1999-07-14  Bruce Guenter  <bguenter@mikhail.qcc.sk.ca>

	* main.cc (parse_long_eq): Fixed to account for "counter" flag
	type.
	(parse_long_noeq): Fixed to account for "counter" flag type.
	(parse_long_eq): set() will return one, but this shouldn't return
	one, so subtract one from its result.
	(show_help): Added a mechanism to display default values on a
	second line.
	(show_help): Output a blank line before the "--help" option line.

1999-07-04  Bruce Guenter  <bguenter@mikhail.qcc.sk.ca>
