@@ -1,3 +1,9 @@
+2000-07-18  Bruce Guenter  <bruce@bruce-guenter.dyndns.org>
+
+	* cli.h (struct cli_option): Added new uinteger type.
+
+	* main.cc (fill): Removed use of mystring.
+
 2000-07-13  Bruce Guenter  <bruce@bruce-guenter.dyndns.org>
 
 	* Removed include of mystring.
